tooltip overflow effect solved

--- a/extend_style.css
+++ b/extend_style.css
@@ -130,6 +130,7 @@ svg .up_pftv_interacting_residues {
 
 .up_pftv_tooltip-container {
   min-width:350px;
+  max-width:460px;
   border: 3px solid #595959;
   background:#FFFFFF;
   border-radius:5px;
